[package]
name = "mynd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = ["todo", "remind"]

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
cuid2 = "0.1.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
