[package]
name = "todo"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
chrono = { version = "0.4.23", features = ["serde"] }
cuid2 = "0.1.0"
colored = "2.0.1"
sha256 = "1.5.0"
anyhow = "1.0.86"
thiserror = "1.0.61"

[dependencies.confy]
features = ["ron_conf"]
default-features = false

[dev-dependencies]
insta = "1.39.0"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
